--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+@import './normalize.css';
 @import '../fonts/fonts.css';
 
 :root {
@@ -15,10 +16,13 @@
     --error: var(--red);
     --success: var(--blue);
 
-    --primary: var(--blue);
-    --secondary: var(--purple);
+    --primary: #4263EB;
+    --secondary: #7048E8;
+
+    --primary-hover: #2342C0;
+    --secondary-hover: #5028C6;
 }
 
-* {
+html, body {
     font-family: 'Roboto', sans-serif;
 }
